2009-03-12  Gustavo Noronha Silva  <gns@gnome.org>

        Reviewed by Alp Toker.

        https://bugs.webkit.org/show_bug.cgi?id=24541
        Scrolling with home and end keys not always works

        Also make page up and page down keys be handled by the webview key
        event code, so that they also work in cases where the GTK+
        scrollbars don't handle them directly, like in the bugzill's patch
        review page.

        * webkit/webkitwebview.cpp:

2009-03-12  Gustavo Noronha Silva  <gns@gnome.org>

        Reviewed by Alp Toker.

        https://bugs.webkit.org/show_bug.cgi?id=24541
        Scrolling with home and end keys not always works

        Make home and end keys behave more consistently for scrolling the
        view.

        * webkit/webkitwebview.cpp:

2009-03-12  Gustavo Noronha Silva  <gns@gnome.org>

        Reviewed by Alp Toker.

        https://bugs.webkit.org/show_bug.cgi?id=24254
        [GTK] spacebar doesn't scroll down

        Make spacebar and shift+spacebar scroll like page up and down
        respectively would.

        * webkit/webkitwebview.cpp:

2009-03-10  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Holger Freyther.

        https://bugs.webkit.org/show_bug.cgi?id=24493
        [GTK] Misc patches for WebKitWebHistoryItem

        Only run code in dispose once per instance.

        * webkit/webkitwebhistoryitem.cpp:
        (_WebKitWebHistoryItemPrivate::webkit_web_history_item_dispose):

2009-03-10  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Holger Freyther.

        https://bugs.webkit.org/show_bug.cgi?id=24493
        [GTK] Misc patches for WebKitWebHistoryItem

        Call deref() on our internal HistoryItem on dispose, as we always
        acquire it with a releaseRef() call to a PassRefPtr, which passes
        ownership.

        * webkit/webkitwebhistoryitem.cpp:
        (_WebKitWebHistoryItemPrivate::webkit_web_history_item_dispose):

2009-03-10  Xan Lopez  <xlopez@igalia.com>
